style: responsive wrap fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,7 @@ thead{
 .offerBody{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 100%;
 }
 
